--- a/src/app/components/projects-and-contracts/projects/projects.component.html
+++ b/src/app/components/projects-and-contracts/projects/projects.component.html
@@ -418,7 +418,7 @@
                   <input
                     type="text"
                     
-                    id="userIds" name="userIds" formControlName="userIds"
+                    id="userIds" name="userIds" formArrayName="userIds"
                     class="form-control custom-input"
                     placeholder="قم باختيار المستخدم"
                   />
