--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -53,7 +53,7 @@
                   </a>
                   <div [ngClass]="{'collapse': isCollapsed['salesManagersSub']}" id="salesManagersSub">
                     <ul class="nav nav-collapse sub-nav">
-                      <li><a href="#"><span class="sub-item">المناديب</span></a></li>
+                      <li><a routerLink="/representatives"><span class="sub-item">المناديب</span></a></li>
                       <li><a href="#"><span class="sub-item">المشرفين والمدراء</span></a></li>
                       <li><a href="#"><span class="sub-item">الفرق</span></a></li>
                       <li><a routerLink="/boxAndCommitment"><span class="sub-item">العهدوالصندوق</span></a></li>
