--- a/src/app/components/stock/categories/item-type/item-type.component.css
+++ b/src/app/components/stock/categories/item-type/item-type.component.css
@@ -201,7 +201,7 @@
 }
 
   /* font */
-  h2,
+  h2,h1,select, form,
   h3,
   h5,
 a,
@@ -304,4 +304,16 @@ tr, th, tr {
   margin: 0;
   font-size: 12px;
   color: #999;
+}
+
+.dropdown-menu {
+  display: none;
+}
+
+.dropdown-menu.show {
+  display: block;
+}
+
+.dropdown.show .dropdown-menu {
+  display: block;
 }
