--- a/src/app/components/stock/categories/item-type/item-type.component.html
+++ b/src/app/components/stock/categories/item-type/item-type.component.html
@@ -64,10 +64,17 @@
                       <i class="fa-solid fa-print"></i>
                       طباعه
                     </button>
-                    <button type="button" class="btn ms-3 my-button2">
-                      <i class="fa-solid fa-gear"></i>
-                      الاجراءات
-                    </button>
+                    <div class="dropdown" [class.show]="isDropdownOpen">
+                      <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                        <i class="fa-solid fa-gear"></i> الاجراءات
+                      </button>
+                      
+                      <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                        <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
+                        <a class="dropdown-item" href="#">عرض</a>
+                        <a class="dropdown-item" href="#">حدف</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
   
@@ -157,7 +164,7 @@
                           <td>{{item.localName}}</td>
                           <td>{{item.name}}</td>
                           <td>
-                            <input type="checkbox" class="large-checkbox" />
+                            <input type="checkbox" (change)="onCheckboxChange(item)" class="large-checkbox" />
                           </td>
                         </tr>
                        
@@ -174,7 +181,44 @@
   </div>
   
 
-
+<!-- Modal for Editing the Selected Row -->
+<!-- <div class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">تعديل نوع الصنف</h5>
+        <button type="button" class="close" (click)="closeModal()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="TypeForm" (ngSubmit)="updateCategory()">
+          <div class="form-group">
+            <label>كود نوع</label>
+            <input formControlName="code" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label>وصف</label>
+            <input formControlName="note" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label> المحلي اسم النوع</label>
+            <input formControlName="localName" class="form-control" />
+          </div>
+          <div class="form-group">
+            <label>اسم نوع </label>
+            <input formControlName="name" class="form-control" />
+          </div>
+       
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" >Save changes</button>
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Close</button>
+      </div>
+    </div>
+  </div>
+</div> -->
 
 <!-- Modal -->
 
@@ -198,7 +242,7 @@
           </h5>
         </div>
         <div class="modal-body">
-          <form [formGroup]="TypeForm" (ngSubmit)="onSubmitAdd()">
+          <form [formGroup]="TypeForm" (ngSubmit)="onSubmit()">
             <div class="container">
               <!-- Row with two fields -->
               <div class="row">
@@ -207,7 +251,7 @@
                     <label for="field1 text-end"> اسم نوع الصنف</label>
                     <input
                       type="text"
-                      id="field1"
+                      id="name"
                       formControlName="name"
                       class="form-control custom-input"
                       placeholder="اسم نوع الصنف"
@@ -221,7 +265,7 @@
                     </label>
                     <input
                       type="text"
-                      id="field2"
+                      id="localName"
                       formControlName="localName"
                       class="form-control custom-input"
                       placeholder="Item Type "
@@ -240,7 +284,7 @@
                     <input
                       type="text"
                       id="field3"
-
+                      disabled
                       class="form-control custom-input"
                       placeholder="اسم المنشأ"
                     />
@@ -252,7 +296,7 @@
                     <input
                     type="date"
                     id="field2"
-        
+                    disabled
                     class="form-control custom-input"
                     placeholder="قم باختيار التاريخ"
                   />
@@ -268,7 +312,7 @@
                     <label for="field1 text-end"> كود نوع الصنف</label>
                     <input
                       type="text"
-                      id="field1"
+                      id="code"
                       formControlName="code"
                       class="form-control custom-input"
                       placeholder="قم باختيار كود نوع الصنف" 
@@ -288,7 +332,7 @@
                   <i class="fa fa-paperclip"></i>
                 </button>
 
-                <div class="custom-file-upload">
+                <div class="custom-file-upload" >
                   <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
                   <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
                   <small class="text-muted"
@@ -304,7 +348,7 @@
                     <textarea
                       class="form-control custom-input"
                       formControlName="note"
-                      id="Textarea1"
+                      id="note"
                       rows="3"
                     ></textarea>
                   </div>
@@ -322,6 +366,7 @@
                 type="button"
                 class="btn closebutton"
                 data-bs-dismiss="modal"
+                (click)="closeModal()"
               >
                 الغاء
               </button>
@@ -336,3 +381,157 @@
     </div>
   </div>
   
+<!-- edit -->
+  <div
+  class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5
+          class="modal-title text-end flex-row-reverse"
+          id="staticBackdropLabel"
+        >
+           اضافه نوع الصنف
+        </h5>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="TypeForm" (ngSubmit)="updateCategory()">
+          <div class="container">
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field1 text-end"> اسم نوع الصنف</label>
+                  <input
+                    type="text"
+                    id="field1"
+                    formControlName="name"
+                    class="form-control custom-input"
+                    placeholder="اسم نوع الصنف"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field2 text-end"
+                    >اسم نوع الصنف باللغه المحليه
+                  </label>
+                  <input
+                    type="text"
+                    id="field2"
+                    formControlName="localName"
+                    class="form-control custom-input"
+                    placeholder="Item Type "
+                  />
+                </div>
+              </div>
+            </div>
+
+        
+
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field3"> المنشأ</label>
+                  <input
+                  disabled
+                    type="text"
+                    id="field3"
+
+                    class="form-control custom-input"
+                    placeholder="اسم المنشأ"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label for="field4"> تاريخ الانشاء</label>
+                  <input
+                  type="date"
+                  id="field2"
+                  disabled
+                  class="form-control custom-input"
+                  placeholder="قم باختيار التاريخ"
+                />
+                </div>
+              </div>
+
+            </div>
+
+
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label for="field1 text-end"> كود نوع الصنف</label>
+                  <input
+                    type="text"
+                    id="field1"
+                    formControlName="code"
+                    class="form-control custom-input"
+                    placeholder="قم باختيار كود نوع الصنف" 
+                  />
+                </div>
+              </div>
+        
+            </div>
+
+            <div class="container mt-5">
+              <h5 class="mb-3">المرفقات</h5>
+              <button class="btn btn-link text-muted p-1">
+                <i class="fa fa-microphone"></i>
+              </button>
+
+              <button class="btn btn-link text-muted p-1">
+                <i class="fa fa-paperclip"></i>
+              </button>
+
+              <div class="custom-file-upload">
+                <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
+                <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
+                <small class="text-muted"
+                  >JPG, PNG or PDF; file size no more than 10MB</small
+                >
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label for="field1 text-end">وصف نوع الصنف</label>
+                  <textarea
+                    class="form-control custom-input"
+                    formControlName="note"
+                    id="Textarea1"
+                    rows="3"
+                  ></textarea>
+                </div>
+              </div>
+            </div>
+
+            
+            <div class="col-md-6 mx-auto ">
+            <button type="submit" class="btn my-button3">
+              حفظ
+              
+            </button>
+
+            <button
+              type="button"
+              class="btn closebutton"
+              data-bs-dismiss="modal"
+              (click)="closeModal()"
+            >
+              الغاء
+            </button>
+            </div>
+          
+     
+  
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
