--- a/src/app/components/stock/storehouse/storehouse-category/storehouse-category.component.html
+++ b/src/app/components/stock/storehouse/storehouse-category/storehouse-category.component.html
@@ -150,22 +150,15 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr>
-                          <td>Fiona Green</td>
-                          <td>Chief Operating Officer (COO)</td>
-                          <td>San Francisco</td>
-                          <td>48</td>
-                          <td>2010/03/11</td>
-                          <td>$850,000</td>
+                        <tr  *ngFor="let item of wares">
+                          <td>{{item.description}}</td>
+                          <td></td>
+                          <td></td>
+                          <td>{{item.localName}}</td>
+                          <td>{{item.name}}</td>
+                          <td><input type="checkbox" class="large-checkbox" /></td>
                         </tr>
-                        <tr>
-                          <td>Shou Itou</td>
-                          <td>Regional Marketing</td>
-                          <td>Tokyo</td>
-                          <td>20</td>
-                          <td>2011/08/14</td>
-                          <td>$163,000</td>
-                        </tr>
+                   
                       </tbody>
                     </table>
                   </div>
@@ -202,7 +195,7 @@
           </h5>
         </div>
         <div class="modal-body">
-          <form>
+          <form (ngSubmit)="onSubmit()" [formGroup]="CatForm">
             <div class="container">
               <!-- Row with two fields -->
               <div class="row">
@@ -212,7 +205,7 @@
                     <input
                       type="text"
                       id="field1"
-                      
+                      formControlName="name"
                       class="form-control custom-input"
                       placeholder="اسم فئه المستودع"
                     />
@@ -226,7 +219,7 @@
                     <input
                       type="text"
                       id="field2"
-                      
+                      formControlName="localName"
                       class="form-control custom-input"
                       placeholder="Warehouse category"
                     />
@@ -272,7 +265,8 @@
                     <input
                       type="text"
                       id="field3"
-                      
+                      formControlName="parentCategory"
+
                       class="form-control custom-input"
                       placeholder="اسم فئه المستودع الابوي"
                     />
@@ -318,6 +312,8 @@
                     <label for="field1 text-end">وصف فئه المستودع</label>
                     <textarea
                       class="form-control custom-input"
+                      formControlName="description"
+
                       id="Textarea1"
                       rows="3"
                     ></textarea>
@@ -327,7 +323,7 @@
 
               
            
-  
+              <div class="col-md-6 mx-auto ">
               <button type="button my-button3" class="btn my-button3">
                 حفظ
               </button>
@@ -339,7 +335,7 @@
               >
                 الغاء
               </button>
-            
+            </div>
        
     
             </div>
