--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -297,7 +297,7 @@
                   <div [ngClass]="{'collapse': isCollapsed['warehouseManagersSub']}" id="warehouseManagersSub">
                     <ul class="nav nav-collapse sub-nav">
                       <li><a routerLink="/typeCategory"><span class="sub-item">فئة الصنف</span></a></li>
-                      <li><a href="#"><span class="sub-item">الأصناف</span></a></li>
+                      <li><a routerLink="/categories"><span class="sub-item">الأصناف</span></a></li>
                       <li><a routerLink="/brands"><span class="sub-item">الماركات</span></a></li>
                       <li><a routerLink="/groupCategory"><span class="sub-item">مجموعة الصنف</span></a></li>
                       <li><a routerLink="/itemType"><span class="sub-item">نوع الصنف</span></a></li>
