--- a/src/app/components/sales/clients/contacts/contacts.component.html
+++ b/src/app/components/sales/clients/contacts/contacts.component.html
@@ -48,10 +48,17 @@
                                     <i class="fa-solid fa-print"></i>
                                     طباعه
                                 </button>
-                                <button type="button" class="btn ms-3 my-button">
-                                    <i class="fa-solid fa-gear"></i>
-                                    الاجراءات
-                                </button>
+                                <div class="dropdown" [class.show]="isDropdownOpen">
+                                    <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                                      <i class="fa-solid fa-gear"></i> الاجراءات
+                                    </button>
+                                    
+                                    <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                                      <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
+                                      <a class="dropdown-item" href="#">عرض</a>
+                                      <a class="dropdown-item" (click)="deleteItemType()">حذف</a>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
 
@@ -122,13 +129,14 @@
                                             <th>رقم الهاتف1 </th>
                                             <th>اسم جهه الإتصال باللغة المحلية</th>
                                             <th>اسم جهه الإتصال</th>
+                                            <th>مسلسل</th>
                                             <th class="firstcolright">
                                                 <input type="checkbox" class="large-checkbox" />
                                             </th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let item of contacts">
+                                        <tr *ngFor="let item of contacts, let i = index">
 
                                             <td> </td>
                                             <td>{{item.email}}</td>
@@ -136,7 +144,8 @@
                                             <td>{{item.phoneNumber1}}</td>
                                             <td>{{item.localName}}</td>
                                             <td>{{item.name}}</td>
-                                            <td> <input type="checkbox" class="large-checkbox" />
+                                            <td>{{ i+1 }}</td>
+                                            <td> <input type="checkbox" (change)="onCheckboxChange(item)" class="large-checkbox" />
                                             </td>
 
                                         </tr>
@@ -392,4 +401,195 @@
             </div>
         </div>
     </div>
+</div>
+
+
+<!-- Update modal -->
+<div class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen">
+<div class="modal-dialog modal-lg">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title text-end flex-row-reverse" id="staticBackdropLabel">
+                تعديل جهه اتصال
+            </h5>
+        </div>
+        <div class="modal-body">
+            <form [formGroup]="contactForm" (ngSubmit)="updateCategory()">
+                <div class="container">
+                    <!-- Row with two fields -->
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for=" text-end"> اسم جهه الإتصال</label>
+                                <input type="text" id="name" name="name" formControlName="name" class="form-control custom-input" placeholder="اسم المنشأ" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for=" text-end">اسم جهه الإتصال باللغة المحلية
+                                </label>
+                                <input type="text" id="localName" name="localName" formControlName="localName" class="form-control custom-input" placeholder="contact Name  " />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="field4 text-end">رقم جوال 1 لجهه الإتصال</label>
+                                <input type="text" id="phoneNumber1" name="phoneNumber1" formControlName="phoneNumber1" class="form-control custom-input" placeholder="رقم الجوال 1" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for=" text-end">رقم الجوال 2 لجهه الإتصال
+                                </label>
+                                <input type="text" id="phoneNumber2" name="phoneNumber2" formControlName="phoneNumber2"  class="form-control custom-input" placeholder="رقم الجوال 2" />
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for=" text-end"> وظيفة جهه التواصل</label>
+                                <input type="text" id="jobTitle" name="jobTitle" formControlName="jobTitle" class="form-control custom-input"
+                                    placeholder="وظيفة جهه التواصل" />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for=" text-end">ايميل جهه التواصل
+                                </label>
+                                <input type="text" id="email" name="email" ngModel formControlName="email" class="form-control custom-input"
+                                    placeholder="ايميل جهه التواصل" />
+                            </div>
+                        </div>
+                    </div>
+
+
+
+                    <!--  -->
+                    <!-- Location Section -->
+                    <div class="row align-items-center">
+                        <div class="col-md-9">
+                            <label for="location" class="form-label">موقع جهه التواصل</label>
+                            <div class="input-group">
+                                <select class="form-select custom-input"  formControlName="locationLinks" name="locationLinks" >
+                                    <option selected disabled>قم بإختيار الموقع</option>
+                                    <option *ngFor="let item of location" [value]="item.id">{{item.locationName}}</option>
+                                    
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-3 d-flex justify-content-start mt-3 mt-md-0">
+                            <button class="btn btn-primary locationButton" type="button">
+                                <i class="fas fa-map-marker-alt"></i> أضف موقع
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="taskField4">جنسية جهه التواصل</label>
+                                <select id="taskField4" name="supplier" formControlName="supplier" class="form-control custom-input">
+                                    <option value="" disabled selected>قم باختيار جنسية جهه التواصل</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option> 
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+
+                                </select> 
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="taskField3">العميل</label>
+                                <select id="taskField" name="clientId" formControlName="clientId" class="form-control custom-input">
+                                    <option value="" disabled selected>قم باختيار العميل</option>
+                                    <option *ngFor="let item of clients" [value]="item.id">{{item.name}}</option>
+                                    
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="taskField4">المورد</label>
+                                <select id="taskField4" name="supplier" formControlName="supplier" class="form-select form-control custom-input">
+                                    <option value="" disabled selected>قم باختيار المورد</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select> 
+                            </div>
+                        </div>
+                    </div>
+                   
+
+                    <div class="row mb-3">
+                        <div class="col-md-12">
+                            <label for="Textarea1">وصف جهه الإتصال</label>
+                            <textarea class="form-control" name="description" formControlName="description" id="Textarea1" rows="3"></textarea>
+                        </div>
+                    </div>
+
+                    <!-- Buttons for actions -->
+                    <div class="row mb-4">
+                        <div class="col-md-12 text-start">
+                            <button class="btn btn-outline-primary me-3">الغاء</button>
+                            <button type="button" class="btn btn-primary m-2">حفظ</button>
+                        </div>
+                    </div>
+
+
+                    <div class="container mt-3 mb-3">
+                        <div class="row">
+                            <div class="col-12 d-flex justify-content-between align-items-center flex-row-reverse">
+                                <div class="file-upload-area d-flex flex-grow-1">
+                                    <label for="file-upload" class="custom-file-upload w-100">
+                                        <input type="file" id="file-upload" />
+                                        <div class="upload-placeholder">
+                                            <i class="fa fa-cloud-upload-alt"></i>
+                                            <span>حدد ملفًا أو قم بالسحب والإسقاط هنا</span>
+                                            <p>JPG, PNG or, file size no more than 10MB</p>
+                                        </div>
+                                    </label>
+                                </div>
+                                <div class="profile-picture ml-3">
+                                    <img src="../../../../../assets/images/images.jpg" alt="صوره شخصيه"
+                                        class="rounded-circle" />
+                                    <p class="text-center mt-2">صوره شخصيه</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- There was code here -->
+
+                    <div class="col-md-6 mx-auto ">
+                        <button type="submit" class="btn my-button3">
+                            اضافه
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
+                        <button type="button" (click)="closeModal()" class="btn closebutton " data-bs-dismiss="modal">
+                            الغاء
+                        </button>
+
+                    </div>
+
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 </div>
