--- a/src/app/components/staff/staff.component.html
+++ b/src/app/components/staff/staff.component.html
@@ -64,10 +64,17 @@
                     <i class="fa-solid fa-print"></i>
                     طباعه
                   </button>
-                  <button type="button" class="btn ms-3 my-button2">
-                    <i class="fa-solid fa-gear"></i>
-                    الاجراءات
-                  </button>
+                  <div class="dropdown" [class.show]="isDropdownOpen">
+                    <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                      <i class="fa-solid fa-gear"></i> الاجراءات
+                    </button>
+                    
+                    <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                      <!-- <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a> -->
+                      <a class="dropdown-item" href="#">عرض</a>
+                      <!-- <a class="dropdown-item" (click)="deleteItemType()">حذف</a> -->
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -143,18 +150,20 @@
                         <th>المهنة</th>
                         <th>اسم الموظف باللغه المحلية</th>
                         <th>اسم الموظف بالعربي</th>
+                        <th>مسلسل</th>
                         <th class="firstcolright">
                           <input type="checkbox" class="large-checkbox" />
                         </th>
                       </tr>
                     </thead>
                     <tbody>
-                      <tr *ngFor="let item of employees">
+                      <tr *ngFor="let item of employees, let i =index ">
                         <td>{{item.departmentManager}}</td>
                         <td>{{item.departmentSupervisor}}</td>
                         <td>{{item.jobTitle}}</td>
                         <td>{{item.localName}}</td>
                         <td>{{item.name}}</td>
+                        <td>{{i+1}}</td>
                         <td class="firstcolright">
                           <input type="checkbox" class="large-checkbox" />
                         </td>
