--- a/src/app/components/staff/descriptions/descriptions.component.html
+++ b/src/app/components/staff/descriptions/descriptions.component.html
@@ -65,10 +65,17 @@
                     <i class="fa-solid fa-print"></i>
                     طباعه
                   </button>
-                  <button type="button" class="btn ms-3 my-button2">
-                    <i class="fa-solid fa-gear"></i>
-                    الاجراءات
-                  </button>
+                  <div class="dropdown" [class.show]="isDropdownOpen">
+                    <button type="button" class="btn ms-3 my-button2" (click)="toggleDropdown()">
+                      <i class="fa-solid fa-gear"></i> الاجراءات
+                    </button>
+                    
+                    <div class="dropdown-menu" [class.show]="isDropdownOpen">
+                      <a class="dropdown-item" (click)="openModalForSelected()">تعديل</a>
+                      <a class="dropdown-item" href="#">عرض</a>
+                      <a class="dropdown-item" (click)="deleteItemType()">حذف</a>
+                    </div>
+                  </div>
                 </div>
               </div>
 
@@ -150,22 +157,17 @@
                       </tr>
                     </thead>
                     <tbody>
-                      <tr>
-                        <td>Fiona Green</td>
-                        <td>Chief Operating Officer (COO)</td>
-                        <td>San Francisco</td>
-                        <td>48</td>
-                        <td>2010/03/11</td>
-                        <td>$850,000</td>
+                      <tr *ngFor="let item of storesSec">
+                        <td>{{item.description}}</td>
+                        <td></td>
+                        <td></td>
+                          <td>{{item.localName}}</td>
+                          <td>{{item.name}}</td>
+                          <td>
+                            <input type="checkbox" (change)="onCheckboxChange(item)" class="large-checkbox" />
+                          </td>
                       </tr>
-                      <tr>
-                        <td>Shou Itou</td>
-                        <td>Regional Marketing</td>
-                        <td>Tokyo</td>
-                        <td>20</td>
-                        <td>2011/08/14</td>
-                        <td>$163,000</td>
-                      </tr>
+                      
                     </tbody>
                   </table>
                 </div>
@@ -199,7 +201,7 @@
         </h5>
       </div>
       <div class="modal-body">
-        <form>
+        <form [formGroup]="JobForm" (ngSubmit)="onSubmit()">
           <div class="container">
             <!-- Row with two fields -->
             <div class="row">
@@ -209,6 +211,7 @@
                   <input
                     type="text"
                     id="field1"
+                    formControlName="name"
                     class="form-control custom-input"
                     placeholder="اسم الوصف الوظيفي"
                   />
@@ -222,7 +225,7 @@
                   <input
                     type="text"
                     id="field2"
-                    
+                    formControlName="localName"
                     class="form-control custom-input"
                     placeholder="Job Description"
                   />
@@ -294,6 +297,7 @@
                     class="form-control custom-input"
                     placeholder="قم بشرح الوصف الوظيفي   "
                     id="floatingTextarea2"
+                    formControlName="description"
                     style="height: 100px"
                   ></textarea>
                 </div>
@@ -301,16 +305,164 @@
             </div>
 
             <div class="col-md-6 mx-auto ">
-              <button type="button" class="btn my-button3">
+              <button type="button my-button3" class="btn my-button3">
                 حفظ
-                <i class="fa-solid fa-plus"></i>
+                
               </button>
-              <button type="button" class="btn closebutton " data-bs-dismiss="modal">
+  
+              <button
+                type="button"
+                class="btn closebutton"
+                data-bs-dismiss="modal"
+                (click)="closeModal()"
+              >
                 الغاء
-              </button></div>
+              </button>
+              </div>
           </div>
         </form>
       </div>
     </div>
   </div>
+</div>
+
+
+
+<div
+class="modal" tabindex="-1" role="dialog" [ngClass]="{'show': isModalOpen}" style="display: block;" *ngIf="isModalOpen"
+>
+<div class="modal-dialog modal-lg">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5
+        class="modal-title text-end flex-row-reverse"
+        id="staticBackdropLabel"
+      >
+         تعديل نوع الصنف
+      </h5>
+    </div>
+    <div class="modal-body">
+      <form [formGroup]="JobForm" (ngSubmit)="updateCategory()">
+        <div class="container">
+          <!-- Row with two fields -->
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field1 text-end"> اسم الوصف الوظيفي</label>
+                <input
+                  type="text"
+                  id="field1"
+                  formControlName="name"
+                  class="form-control custom-input"
+                  placeholder="اسم الوصف الوظيفي"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field2 text-end"
+                  >اسم الوصف الوظيفي باللغه المحليه
+                </label>
+                <input
+                  type="text"
+                  id="field2"
+                  formControlName="localName"
+                  class="form-control custom-input"
+                  placeholder="Job Description"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="field1 text-end"> تاريخ الانشاء </label>
+                <input
+                  type="date"
+                  id="field2"
+                  
+                  class="form-control custom-input"
+                  placeholder="قم باختيار التاريخ"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field3"> المنشأ</label>
+                <input
+                  type="text"
+                  id="field3"
+                  
+                  class="form-control custom-input"
+                  placeholder="المنشا"
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="field4"> كود الوصف الوظيفي </label>
+                <input
+                  type="text"
+                  id="field4"
+                  
+                  class="form-control custom-input"
+                  placeholder="كود الوصف الوظيفي"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="container mt-5">
+            <h5 class="mb-3">المرفقات</h5>
+            <button class="btn btn-link text-muted p-1"><i class="fa fa-microphone"></i></button>
+
+            <button class="btn btn-link text-muted p-1"><i class="fa fa-paperclip"></i></button>
+
+            <div class="custom-file-upload">
+              <i class="fas fa-cloud-upload-alt fa-3x mb-3"></i>
+              <p>حدد ملفًا أو قم بالسحب والإسقاط هنا</p>
+              <small class="text-muted">JPG, PNG or PDF; file size no more than 10MB</small>
+            </div>
+          </div>
+
+          <div class="row mb-4">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="floatingTextarea2">وصف الوصف الوظيفي</label>
+
+                <textarea
+                  class="form-control custom-input"
+                  placeholder="قم بشرح الوصف الوظيفي   "
+                  id="floatingTextarea2"
+                  formControlName="description"
+                  style="height: 100px"
+                ></textarea>
+              </div>
+            </div>
+          </div>
+
+         <div class="col-md-6 mx-auto ">
+            <button type="submit" class="btn my-button3">
+              حفظ
+              
+            </button>
+
+            <button
+              type="button"
+              class="btn closebutton"
+              data-bs-dismiss="modal"
+              (click)="closeModal()"
+            >
+              الغاء
+            </button>
+            </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 </div>
